--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "productionapp",
   "version": "1.0.0",
   "description": "This is a production grade app",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.js"
   },
   "keywords": [
     "Backend"
